syntax = "proto3";

package proto;

option go_package = "../pb";

// The task event definition.
service TaskEvent {
    rpc Event (TaskEventReq) returns (TaskEventResp) {}
}

// The request message
message TaskEventReq {
    string eventType = 1;
    TaskEventReqData data = 2;
}

message TaskEventReqData {
    string processID = 1;
    string processInstanceID = 2;
    string nodeDefKey = 3;
    string taskID = 4; // 如果是会签则taskID是多个，英文逗号间隔的字符串
}

// The response message
message TaskEventResp {
    enum StatusCode {
        SUCCESS = 0;
        FAILURE = -1;
    }

    StatusCode code = 1;
    string msg = 2;
    TaskEventRespData data = 3;
}

message TaskEventRespData {
    string executeType = 1; // 执行类型：endExecution，endProcess
}













